tests/paczka2/big_fuzzy/48741412.err
Error in line 20: zGqFokcNGop S279 20,2
Error in line 22: KkGv4 S488 90,0
Error in line 27: E75RMWZG A324 11,5
Error in line 38: TLWknyRYH A253 10,7
Error in line 29: E75RMWZG A253 87,1
Error in line 34: 3BTQV A253 7,9
Error in line 45: wnbU95D S279 79,8
Error in line 53: E75RMWZG S279 80,3
Error in line 58: TLWknyRYH S488 56,7
Error in line 72: TLWknyRYH A324 32,0
Error in line 80: KkGv4 A324 5,5
Error in line 84: A253 S279 41,7
Error in line 78: zGqFokcNGop A253 90,8
Error in line 97: E75RMWZG A324 93,1
Error in line 103: KkGv4 A324 6,0
Error in line 110: E75RMWZG S488 311,6
Error in line 135: 3BTQV S279 0,1
Error in line 139: 3BTQV A324 38,2
Error in line 156: wnbU95D S279 551,0
Error in line 162: wnbU95D A253 81,4
Error in line 167: wnbU95D S279 -2,3
Error in line 168: A253 S279 65,4
Error in line 171: wnbU95D S279 101,1
Error in line 189: TLWknyRYH A253 0,2
Error in line 198: E75RMWZG A253 66,3
Error in line 204: KkGv4 A324 61,7
Error in line 213: TLWknyRYH S279 6,2
Error in line 216: TLWknyRYH S488 94,0
Error in line 220: 3BTQV A324 16,4
Error in line 231: 3BTQV S488 99,7
Error in line 245: A253 S279 90,23
Error in line 242: A253 A324 75,5
